tests/baselines/reference/multipleExportAssignments.errors.txt
tests/cases/compiler/multipleExportAssignments.ts(13,1): error TS2300: Duplicate identifier 'export='.
tests/cases/compiler/multipleExportAssignments.ts(14,1): error TS2300: Duplicate identifier 'export='.


==== tests/cases/compiler/multipleExportAssignments.ts (2 errors) ====
    interface connectModule {
        (res, req, next): void;
    }
    interface connectExport {
        use: (mod: connectModule) => connectExport;
        listen: (port: number) => void;
    }
    var server: {
        (): connectExport;
        test1: connectModule;
        test2(): connectModule;
    };
    export = server;
    ~~~~~~~~~~~~~~~~
!!! error TS2300: Duplicate identifier 'export='.
    export = connectExport;
    ~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2300: Duplicate identifier 'export='.
     
    